removed letter spacing on the bottom of the Spanish home page to prevent word wrap to the next line

--- a/SpanHome.css
+++ b/SpanHome.css
@@ -210,7 +210,7 @@ html,body {
     color: rgb(31, 13, 127);
     font-size: 1.6rem;
     text-shadow: rgba(251, 251, 251, 0.896) 1px 2px;
-    letter-spacing: .04em;
+    //letter-spacing: .04em;
     font-weight: bold;
   }
   
